--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -5388,6 +5388,17 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "joined[(joined['diff'] == 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
